[package]
name = "gglibrary"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
libc = "0.2.172"
strum = "0.27.1"
widestring = "1.2.0"
minhook = "0.7.1"
enum-map = { version = "2.7.3", features = ["serde"] }
hex = "0.4.3"
winapi = "0.3.9"
